syntax = "proto3";

option java_package = "org.bitbucket.cpchain.chain.protos";
option go_package = "personalpb";

package personalpb;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

message PrivateAccountAPIRequest {
    google.protobuf.StringValue url = 1;
    google.protobuf.StringValue path = 2;
    google.protobuf.BoolValue pin = 3;
    bytes data = 4;
    bytes sig = 5;
    google.protobuf.StringValue priv_key = 6;
    google.protobuf.StringValue password = 7;
    bytes addr = 8;
    google.protobuf.UInt64Value duration = 9;
    google.protobuf.Any send_tx_args = 10;
}

message PrivateAccountAPIReply {
    google.protobuf.Any account = 1;
    google.protobuf.Any account_addresses = 2;
    google.protobuf.Any raw_wallets = 3;
    bool is_ok = 4;
    bytes tx_hash = 5;
    google.protobuf.Any sign_tx_result= 6;
    bytes signature = 7;
    bytes address = 8;
}
service PrivateAccountAPI {
    rpc DeriveAccount(PrivateAccountAPIRequest) returns (
    PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/deriveAccount"
         body : "*"
    };
    }
    rpc EcRecover(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/ecRecover"
         body : "*"
    };
    }
    rpc ImportRawKey(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/importRawKey"
         body : "*"
    };
    }
    rpc ListAccounts(google.protobuf.Empty) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/listAccounts"
         body : "*"
    };
    }
    rpc ListWallets(google.protobuf.Empty) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/listWallets"
         body : "*"
    };
    }
    rpc LockAccount(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/lockAccount"
         body : "*"
    };
    }
    rpc NewAccount(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/newAccount"
         body : "*"
    };
    }
    rpc OpenWallet(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/openWallet"
         body : "*"
    };
    }
    rpc SendTransaction(PrivateAccountAPIRequest) returns (
    PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/sendTransaction"
         body : "*"
    };
    }
    rpc Sign(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/sign"
         body : "*"
    };
    }
    rpc SignAndSendTransaction(PrivateAccountAPIRequest)
    returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/signAndSendTransaction"
         body : "*"
      };
    }
    rpc SignTransaction(PrivateAccountAPIRequest) returns (
    PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/signTransaction"
         body : "*"
    };
    }
    rpc UnlockAccount(PrivateAccountAPIRequest) returns (PrivateAccountAPIReply) {
        option (google.api.http) = {
post : "/apis/v1/personal/unlockAccount"
         body : "*"
    };
    }
}

